# hyji

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  todolist.md  tsconfig.json  v1final.md  whatwediscussed.md  새 텍스트 문서.txt
.claude/: settings.local.json
.github/workflows/: release.yml
prototype/: 프레젠테이션1.pptx
scripts/: gen-icons.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.rgba
src-tauri/src/: backup.rs  commands.rs  lib.rs  main.rs
src/components/home/: Dashboard.tsx
src/components/layout/: PdfViewer.tsx  Sidebar.tsx  Splitter.tsx  TrackerPanel.tsx
src/components/pdf/: ContextMenu.tsx  HighlightLayer.tsx  MemoEditor.tsx  PdfCanvas.tsx  Toolbar.tsx
src/components/shared/: AboutModal.tsx  ExportDialog.tsx  ImportDialog.tsx  KeyboardShortcutsModal.tsx  Modal.tsx  PreferencesDialog.tsx  ShortcutsModal.tsx  SmartPaste.tsx
src/components/sidebar/: KeywordGraph.tsx  KeywordGraphFullscreen.tsx  PaperControls.tsx  PaperList.tsx  ProjectTree.tsx
src/components/tracker/: BulletEditor.tsx
src/hooks/: useDragReorder.ts  usePaperDrag.ts
src/lib/: backup.ts  bibtex.ts  citations.ts  db.ts  keywordExtract.ts  menuEvents.ts  parser.ts  pdfKeywords.ts  pdfMeta.ts  venueMap.ts  venues.json
src/stores/: annotations.ts  keywords.ts  papers.ts  projects.ts  ui.ts
src/styles/: globals.css
src/types/: index.ts
